nt_sources = files(
    'ConnectionList.cpp',
    'InstanceImpl.cpp',
    'ListenerStorage.cpp',
    'LocalStorage.cpp',
    'LoggerImpl.cpp',
    'NetworkClient.cpp',
    'NetworkServer.cpp',
    'ntcore_c.cpp',
    'ntcore_cpp.cpp',
    'ntcore_meta.cpp',
    'ntcore_meta_c.cpp',
    'ntcore_test.cpp',
    'Types_internal.cpp',
    'Value_internal.cpp',
    'Value.cpp',
    'ValueCircularBuffer.cpp'
)

subdir('networktables')
subdir('net3')
subdir('net')